!_exam/19_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: secret-pod
  name: secret-pod
  namespace: secret
spec:
  containers:
  - image: busybox:1.31.1
    name: secret-pod
    args: ["sh", "-c", "sleep 3600"]
    volumeMounts:                         
    - name: secret1                       
      mountPath: /tmp/secret1             
      readOnly: true
  tolerations:                            
  - effect: NoSchedule                    
    key: node-role.kubernetes.io/master
  volumes:                                
  - name: secret1                         
    secret:                               
      secretName: secret1
